fixing z-index of smart-search button

--- a/awx/ui/client/src/shared/smart-search/smart-search.block.less
+++ b/awx/ui/client/src/shared/smart-search/smart-search.block.less
@@ -75,6 +75,7 @@
     cursor: pointer;
     border-top-right-radius: 5px;
     border-bottom-right-radius: 5px;
+    z-index: 1;
 }
 
 .SmartSearch-searchButton:hover {
